# insurance-whittaker

./: CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  run_edge_case_tests.py  run_expanded_tests_databricks.py  run_tests_databricks.py  run_tests_databricks_v2.py
.github/workflows/: ci.yml  docs.yml  tests.yml
benchmarks/: benchmark.py
databricks/: benchmark_whittaker_vs_baselines.py
notebooks/: 02_validation_smoothing_vs_raw.py  benchmark_whittaker.py  databricks_validation.py  fremtpl2_age_smoothing.py  quickstart.ipynb  quickstart.py  whittaker_demo.py
src/insurance_whittaker/: __init__.py  _smoother2d.py  _utils.py  glm.py  plots.py  selection.py  smoother.py  smoother2d.py
tests/: test_batch25_coverage.py  test_edge_cases.py  test_expanded_coverage.py  test_extended_coverage.py  test_gaps.py  test_glm.py  test_new_coverage.py  test_p0_regressions.py  test_plots.py  test_selection.py  test_smoother.py  test_smoother2d.py
