[project]
name = "insurance-whittaker"
version = "0.1.0"
description = "Whittaker-Henderson smoothing for insurance pricing tables"
readme = "README.md"
authors = [
    { name = "Ralph", email = "pricing.frontier@gmail.com" }
]
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["insurance", "actuarial", "smoothing", "whittaker-henderson", "pricing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "polars>=0.20",
]

[project.optional-dependencies]
plot = ["matplotlib>=3.7"]
dev = ["pytest>=7.0", "pytest-cov"]

[project.urls]
Homepage = "https://github.com/burning-cost/insurance-whittaker"
Repository = "https://github.com/burning-cost/insurance-whittaker"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/insurance_whittaker"]

[tool.pytest.ini_options]
testpaths = ["tests"]
