[project]
name = "insurance-whittaker"
version = "0.1.3"
description = "Whittaker-Henderson smoothing for insurance pricing tables"
readme = "README.md"
authors = [
    { name = "Ralph", email = "pricing.frontier@gmail.com" }
]
requires-python = ">=3.10"
license = "MIT"
keywords = ["insurance", "actuarial", "smoothing", "whittaker-henderson", "pricing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Mathematics",

    "Intended Audience :: Science/Research",
    "Topic :: Office/Business :: Financial",
]
dependencies = [
    "numpy>=2.0",
    "scipy>=1.10",
    "polars>=1.0",
]

[project.optional-dependencies]
plot = ["matplotlib>=3.7"]
dev = ["pytest>=7.0", "pytest-cov", "pdoc>=14.0.0"]

[project.urls]
Homepage = "https://burning-cost.github.io/insurance-whittaker"
Repository = "https://github.com/burning-cost/insurance-whittaker"
Changelog = "https://github.com/burning-cost/insurance-whittaker/releases"
Documentation = "https://burning-cost.github.io/insurance-whittaker"
Issues = "https://github.com/burning-cost/insurance-whittaker/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/insurance_whittaker"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
