[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "insurance-whittaker"
version = "0.1.5"
description = "Whittaker-Henderson smoothing for insurance pricing and actuarial rating tables: 1D and 2D graduation with automatic lambda selection via cross-validation."
readme = "README.md"
authors = [
    { name = "Burning Cost", email = "pricing.frontier@gmail.com" }
]
requires-python = ">=3.10"
license = "MIT"
keywords = [
    "insurance",
    "actuarial",
    "smoothing",
    "whittaker",
    "whittaker-henderson",
    "henderson",
    "graduation",
    "rating tables",
    "pricing",
    "UK",
    "personal lines",
    "age graduation",
    "2D smoothing",
    "cross-validation",
    "penalized regression",
    "spline",
    "experience rating",
    "claims experience",
    "loss development",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Office/Business :: Financial",
]
dependencies = [
    "numpy>=2.0",
    "scipy>=1.10",
    "polars>=1.0",
]

[project.optional-dependencies]
plot = ["matplotlib>=3.7"]
dev = ["pytest>=7.0", "pytest-cov", "pdoc>=14.0.0"]

[project.urls]
Homepage = "https://burning-cost.github.io/libraries/insurance-whittaker/"
Documentation = "https://burning-cost.github.io/libraries/insurance-whittaker/"
Repository = "https://github.com/burning-cost/insurance-whittaker"
"Bug Tracker" = "https://github.com/burning-cost/insurance-whittaker/issues"
Changelog = "https://github.com/burning-cost/insurance-whittaker/releases"

[tool.hatch.build.targets.wheel]
packages = ["src/insurance_whittaker"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.1.0",
]
